[workspace]
resolver = "2"

members = [
    "src/contest",
    "src/contest/2023",
    "src/contest/2024",
    "src/contest/2025",
    "src/contest/2026",
    "src/example",
    "src/library_checker",
    "src/mylib"
]

[workspace.dependencies]

# スニペット用(AtCoderでは使えない)
# 参考: Rustで競技プログラミングをするときの"スニペット管理"をまじめに考える(cargo-snippetの紹介) - Qiita https://qiita.com/hatoo@github/items/5c6814e72ddd2ecaf48f
cargo-snippet = "0.6.5"

# AtCoder でつかうライブラリ
# ライブラリの説明(2025/10): https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/Nov-2024-Language-Update-%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA%E6%A1%88

# --- 2025年から ---
# rpds = "=1.1.1"
# rand_xorshift = "=0.4.0"
# rand_xoshiro = "=0.7.0"
# statrs = "=0.18.0"
# primal = "=0.3.3"
# thiserror = "=2.0.16"

# --- 2023年から ---
ac-library-rs = "=0.2.0"
# once_cell = "=1.21.3"
# static_assertions = "=1.1.0"
# varisat = "=0.2.2"
# memoise = "=0.3.2"
# argio = "=0.2.0"
# bitvec = "=1.0.1"
# counter = "=0.7.0"
hashbag = "=0.1.12"
# pathfinding = "=4.14.0"
# recur-fn = "=2.2.0"
# indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
# amplify = { version = "=4.9.0", features = [
#     "c_raw",
#     "rand",
#     "stringly_conversions",
# ] }
# amplify_derive = "=4.0.1"
# amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
# multimap = "=0.10.1"
# btreemultimap = "=0.1.1"
bstr = "=1.12.0"
# az = "=1.2.1"
# glidesort = "=0.1.2"
# tap = "=1.0.1"
omniswap = "=0.1.0"
# multiversion = "=0.8.0"

# --- 2020年から ---
# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
num = "=0.4.3"
# num-bigint = "=0.4.6"
# num-complex = "=0.4.6"
num-integer = "=0.1.46"
# num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
# `num-traits`の自動実装
num-derive = "=0.4.2"

# NumPyの`ndarray`のような多次元配列
ndarray = "=0.16.1"

# 線形代数
# nalgebra = "=0.34.0"
# alga = "=0.9.3"

# libmのRust実装
# libm = "=0.2.15"

# 乱数
rand = "=0.9.2"
# getrandom = "=0.3.3"
# rand_chacha = "=0.9.0"
# rand_core = "=0.9.3"
# rand_hc = "=0.4.0"
# rand_pcg = "=0.9.0"

# 乱数の分布の追加
# rand_distr = "=0.5.1"

# グラフ
petgraph = "=0.8.2"

# 挿入順を保持するhash table
# indexmap = "=2.11.0"

# 正規表現
regex = "=1.11.2"

# staticアイテムの遅延初期化
# lazy_static = "=1.5.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
# ordered-float = "=5.0.0"

# ASCII文字列
# ascii = "=1.1.0"

# permutation
permutohedron = "=0.2.4"

# スライスの拡張
superslice = "=1.0.0"

# イテレータの拡張
itertools = "=0.14.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
# itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
maplit = "=1.0.2"

# 即席enum `Either<L, R>`
# either = "=1.15.0"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
# im-rc = "=15.1.0"

# 可変長bit set
# fixedbitset = "=0.5.7"

# 可変長bit set
# bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.5.0", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
# text_io = "=0.1.13"

# ある長さまでは要素を「直に」持つ可変長配列
rustc-hash = "=2.1.1"
# smallvec = { version = "=1.15.1", features = [
#     "const_generics",
#     "const_new",
#     "write",
#     "union",
#     "serde",
#     "arbitrary",
# ] }
# ---------------------------------------------------------------------

# dev-dependencies も [workspace.dependencies] に統合
cli_test_dir = "0.1"
