[project]
name = "atcoder-rust"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paruma", email = "paruma184az@gmail.com" }
]
dependencies = [
    "selenium>=4.19.0",
    "setuptools>=69.5.1",
    "sympy>=1.12",
    "numpy>=1.26.4",
    "online-judge-tools>=11.5.1",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.1.6",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atcoder_rust"]
