[project]
name = "atcoder-rust"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "paruma", email = "paruma184az@gmail.com" }]
dependencies = [
    "selenium>=4.19.0",
    "setuptools>=69.5.1",
    "sympy>=1.12",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.1.6",
    "ruff>=0.4.4",
    "bpython>=0.25",
    "ptpython>=3.0.30",
    "aclogin>=0.2.1",
    "online-judge-tools>=11.5.1",
]

[tool.uv]
package = false
