[package]
name = "example"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
mylib = { path = "../mylib" }
cargo-snippet = { workspace = true }
ac-library-rs = { workspace = true }
hashbag = { workspace = true }
easy-ext = { workspace = true }
bstr = { workspace = true }
omniswap = { workspace = true }
num = { workspace = true }
num-integer = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
permutohedron = { workspace = true }
superslice = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
proconio = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
cli_test_dir = { workspace = true }